--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="8BIT Landing page">
+  <meta name="description" content="We are the Digital Maestros">
+  <meta property="og:description" content="We are the Digital Maestros">
+  <meta property="og:url" content="https://abduqahhorovaziz.github.io/8bit-landing/">
+
 
   <title>8BIT</title>
 
