--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Archivo&display=swap" rel="stylesheet">
   <link href="https://api.fontshare.com/v2/css?f[]=clash-display@500&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
 
   <link rel="stylesheet" href="css/main.css">
 </head>
