--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <title>8BIT</title>
 
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Archivo&display=swap" rel="stylesheet">
@@ -49,10 +50,12 @@
     <section class="hero">
       <div class="container">
         <div class="hero__wrapper">
-          <h1 class="hero__heading section-title">
+          <h1 class="hero__heading section-title" data-aos="fade-up">
             We are the <span class="text-background">Digital</span> Maestros
           </h1>
-          <p class="hero__text large">Morbi cursus hendrerit orci et aliquet. Nam eget tincidunt dolor, at sagittis
+          <p class="hero__text large" data-aos="fade-up" data-aos-delay="300">Morbi cursus hendrerit orci et aliquet.
+            Nam eget tincidunt
+            dolor, at sagittis
             ligula. Donec pellentesque quam erat, elementum dignissim quam maximus quis.</p>
         </div>
       </div>
@@ -93,7 +96,8 @@
     <section class="about" id="about">
       <div class="container">
         <div class="about__wrapper">
-          <h2 class="about__title section-title">Who we <span class="text-background">actually</span> are?</h2>
+          <h2 class="about__title section-title" data-aos="fade-up">Who we <span class="text-background">actually</span>
+            are?</h2>
           <div class="about__animation-wrapper">
             <div class="about__grid">
               <div class="about__grid-border">
@@ -119,9 +123,10 @@
             </div>
           </div>
           <div class="about__description">
-            <p class="about__description-title large">Aliquam tincidunt in lectus in dictum. Phasellus sodales hendrerit
+            <p class="about__description-title large" data-aos="fade-up">Aliquam tincidunt in lectus in dictum.
+              Phasellus sodales hendrerit
               vehicula. Vivamus imperdiet sed ipsum non placerat. Sed at cursus risus.</p>
-            <a href="" class="about__description-btn primary-btn">About us</a>
+            <a href="" class="about__description-btn primary-btn" data-aos="fade-up" data-aos-delay="300">About us</a>
           </div>
         </div>
       </div>
@@ -130,9 +135,10 @@
     <section class="services">
       <div class="container">
         <div class="services__wrapper">
-          <h2 class="services__title section-title">Our <span class="text-background">services</span></h2>
+          <h2 class="services__title section-title" data-aos="fade-up">Our <span class="text-background">services</span>
+          </h2>
           <div class="services__grid">
-            <div class="services__grid-item">
+            <div class="services__grid-item" data-aos="flip-left">
               <div class="services__content">
                 <img src="./images/services/service-01.svg" alt="service image" class="services__logo">
                 <div class="service__content-information">
@@ -144,7 +150,7 @@
                 </div>
               </div>
             </div>
-            <div class="services__grid-item">
+            <div class="services__grid-item" data-aos="flip-left" data-aos-delay="150">
               <div class="services__content">
                 <img src="./images/services/service-02.svg" alt="service image" class="services__logo">
                 <div class="service__content-information">
@@ -156,7 +162,7 @@
                 </div>
               </div>
             </div>
-            <div class="services__grid-item">
+            <div class="services__grid-item" data-aos="flip-left" data-aos-delay="200">
               <div class="services__content">
                 <img src="./images/services/service-03.svg" alt="service image" class="services__logo">
                 <div class="service__content-information">
@@ -168,7 +174,7 @@
                 </div>
               </div>
             </div>
-            <div class="services__grid-item">
+            <div class="services__grid-item" data-aos="flip-left" data-aos-delay="250">
               <div class="services__content">
                 <img src="./images/services/service-04.svg" alt="service image" class="services__logo">
                 <div class="service__content-information">
@@ -188,7 +194,8 @@
     <section class="projects" id="projects">
       <div class="container">
         <div class="projects__wrapper">
-          <h2 class="projects__title section-title">Recent <span class="text-background">Projects</span></h2>
+          <h2 class="projects__title section-title" data-aos="fade-up">Recent <span
+              class="text-background">Projects</span></h2>
           <nav class="projects__nav">
             <ul class="projects__nav-list">
               <li class="projects__nav-item">
@@ -290,10 +297,10 @@
       <div class="container">
         <div class="cta__wrapper">
           <div class="cta__information">
-            <h3 class="cta__title">
+            <h3 class="cta__title" data-aos="fade-up">
               Let's work together
             </h3>
-            <p class="cta__subtitle large">
+            <p class="cta__subtitle large" data-aos="fade-up" data-aos-delay="300">
               Morbi elementum tellus non nunc fringilla, tempor imperdiet ex aliquam. Integer lacinia viverra blandit.
             </p>
           </div>
@@ -375,6 +382,7 @@
       </div>
     </footer>
   </main>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="./js/main.js"></script>
 </body>
 
